samples/compile-error/missing-semicolon.nom
// This is the easiest semicolon to forget in almost any language

//! Error occurred during parsing:
//!     Failed to parse token at samples/compile-error/missing-semicolon.nom:15:5 (token type: Keyword(Val))
//!     Expected one of ';', '.', or an operator.

fn main() -> unit {
    val a: i32 = 2;
    val b: i32 = 4;
    val c: i32 = if (a == b) {
        4
    } else {
        2
    }  // <--- Missing semicolon. RIP.
    val d: i32 = c;
}
